--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Evaluation</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+
+
+
 </head>
 <body>
+<div id="cursor"></div>
+
+<div id="particles-js"></div>
     <div class="container">
-        <h1>Welcome to the Evaluation Room</h1>
-        <form action="/create-room" method="POST">
-            <button type="submit">Create Room</button>
+        <h1>Benvenuto nella piattaforma di Peer Review </h1>
+		<p><b> Login </b></p>
+        <form id="loginForm"><center>
+            <input type="text" id="username" name="username" placeholder="Nome Utente" required>
+			<br><br>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+			<br><br>
+            <button type="submit">Accedi</button>
+			</center>
         </form>
     </div>
+    <script src="script.js"></script>
+
 </body>
 </html>
