--- a/index.html
+++ b/index.html
@@ -1,34 +1,30 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-
-
-
-</head>
-<body>
-<div id="cursor"></div>
-
-<div id="particles-js"></div>
-    <div class="container">
-        <h1>Benvenuto nella piattaforma di Peer Review </h1>
-		<p><b> Login </b></p>
-        <form id="loginForm"><center>
-            <input type="text" id="username" name="username" placeholder="Nome Utente" required>
-			<br><br>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-			<br><br>
-            <button type="submit">Accedi</button>
-			</center>
-        </form>
-    </div>
-    <script src="script.js"></script>
-
-</body>
-</html>
+export default function WelcomePage() {
+    return (
+      <div className="min-h-screen flex flex-col items-center justify-between bg-white relative py-20">
+        {/* Welcome Text */}
+        <div className="text-center">
+          <h1 className="text-8xl italic font-bold">WELCOME</h1>
+          <h2 className="text-4xl mt-2">to</h2>
+          <h3 className="text-4xl font-medium mt-2 relative left-5">peerreview</h3>
+        </div>
+  
+        {/* Buttons */}
+        <div className="mt-20 flex flex-col gap-6">
+          <button className="px-8 py-4 bg-blue-500 text-white rounded-2xl text-2xl shadow-lg hover:bg-blue-600 transition">
+            Create a Room
+          </button>
+          <button className="px-8 py-4 bg-green-500 text-white rounded-2xl text-2xl shadow-lg hover:bg-green-600 transition">
+            Join a Room
+          </button>
+        </div>
+  
+        {/* Language Switcher */}
+        <div className="absolute bottom-8 right-8">
+          <button className="px-6 py-3 bg-gray-700 text-white rounded-lg shadow-md hover:bg-gray-900 transition">
+            Change Language
+          </button>
+        </div>
+      </div>
+    );
+  }
+  
